--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,12 +1,16 @@
-body { 
-	font-family: 'Roboto', sans-serif;
-	color: #333; }
+@import "normalize.css";
+@import "base/_global";
+@import "modules/_large-hero";
 
-	img { 
-		max-width: 100%;
-		height: auto; }
 
-	/* ========================================
-	:::: HERO SECTION￼ 
-	======================================== */
-	@import "modules/_large-hero";
+
+
+
+
+
+
+
+
+
+
+
