--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -1,2 +1,81 @@
 .large-hero { 
-	position: relative; }
+	position: relative;
+
+	&__text-content { 
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+	text-align: center;
+	width: 100%; }
+
+	&__title { 
+	color: #2f5572;
+	font-size: 4.8rem;
+	font-weight: 300;
+	margin: 0; }
+
+	&__subtitle { 
+	color: #2f5572;
+	font-size: 2.9rem;
+	font-weight: 300;
+	margin: 0; }
+
+	&__description { 
+		color: #fff;
+		font-size: 1.5rem; } }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
