--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -10,20 +10,25 @@
 	width: 100%; }
 
 	&__title { 
-	color: #2f5572;
+	color: $mainBlue;
 	font-size: 4.8rem;
 	font-weight: 300;
 	margin: 0; }
 
 	&__subtitle { 
-	color: #2f5572;
+	color: $mainBlue;
 	font-size: 2.9rem;
 	font-weight: 300;
 	margin: 0; }
 
 	&__description { 
 		color: #fff;
-		font-size: 1.5rem; } }
+		font-size: 1.875rem;
+		font-weight: 100;
+		text-shadow: 2px 2px 0 rbga(0, 0, 0, .1);
+		max-width: 30rem;
+		margin-left: auto;
+		margin-right: auto; } }
 
 
 
