--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -15,4 +15,13 @@
 	&--narrow { 
 		margin-left: auto;
 		margin-right: auto;
-		max-width: 500px;  } }
+		max-width: 500px; }
+
+	&--light { 
+		font-weight: 100; }
+
+	&--b-margin-small { 
+		margin-bottom: .5em; }
+
+	&--b-margin-large { 
+		margin-bottom: 1.6em; } }
