applied more css styles to our-beginning img section

--- a/app/assets/css/modules/_wrapper.css
+++ b/app/assets/css/modules/_wrapper.css
@@ -3,4 +3,11 @@
 	margin-right: auto;
 	max-width: 1200px;
 	padding-left: 18px;
-	padding-right: 18px; }
+	padding-right: 18px;
+
+	&--medium { 
+		max-width: 976px; }
+
+	.wrapper { 
+		padding-left: 0;
+		padding-right: 0; } }
