--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -1,7 +1,10 @@
 .headline { 
 	color: $mainBlue;
-	font-size: 2.875rem;
-	font-weight: 300; 
+	font-size: 1.9rem;
+	font-weight: 300;
+
+	@mixin atMedium { 
+		font-size: 2.875rem; } 
 
 	&--centered { 
 		text-align: center; }
@@ -10,7 +13,10 @@
 		color: $mainOrange; }
 
 	&--small { 
-		font-size: 1.875rem; } 
+		font-size: 1.2rem;
+
+		@mixin atSmall { 
+			font-size: 1.875rem; } } 
 
 	&--narrow { 
 		margin-left: auto;
