--- a/app/assets/css/modules/_wrapper.css
+++ b/app/assets/css/modules/_wrapper.css
@@ -2,6 +2,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 1200px;
+	overflow: hidden;
 	padding-left: 18px;
 	padding-right: 18px;
 
@@ -10,4 +11,10 @@
 
 	.wrapper { 
 		padding-left: 0;
-		padding-right: 0; } }
+		padding-right: 0; }
+
+	&--b-margin { 
+		margin-bottom: 1rem;
+
+		@mixin atSmall { 
+		margin-bottom: 3.875rem; } } }
