--- a/app/assets/css/modules/_row.css
+++ b/app/assets/css/modules/_row.css
@@ -11,9 +11,17 @@
 	@mixin atMedium { 
 
 		&__medium-4 { 
-		float: left;
-		width: 33.33%; }
+			float: left;
+			width: 33.33%; }
+
+		&__medium-4--larger { 
+			width: 37%; }
 
 		&__medium-8 { 
 			float: left;
-			width: 66.66%; } } }
+			width: 66.66%; }
+
+		&__medium-8--smaller { 
+			width: 63%; } 
+
+	} }
