creadted more styles and created a new file _generic-content-container.css

--- a/app/assets/css/modules/_headline.css
+++ b/app/assets/css/modules/_headline.css
@@ -30,4 +30,7 @@
 		margin-bottom: .5em; }
 
 	&--b-margin-large { 
-		margin-bottom: 1.6em; } }
+		margin-bottom: 1.6em; }
+
+	&--no-t-margin { 
+		margin-top: 0; } }
