--- a/app/assets/css/modules/_section-title.css
+++ b/app/assets/css/modules/_section-title.css
@@ -6,6 +6,9 @@
 	strong { 
 		font-weight: 500; }
 
+	&--blue { 
+		color: $mainBlue; }
+
 	&__icon { 
 		display: block;
 		margin-right: auto;
@@ -16,4 +19,6 @@
 			display: inline-block;
 			margin-right: .5rem;
 			margin-left: 0;
-			margin-bottom: 0; } } }
+			margin-bottom: 0;
+			position: relative;
+			top: 10px; } } }
