finished styling the header section

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "normalize.css";
 @import "base/_variables";
 @import "base/_global";
 @import "base/_mixins";
@@ -14,6 +15,8 @@
 @import "modules/_testimonial";
 @import "modules/_sprite";
 @import "modules/_site-footer";
+@import "modules/_site-header";
+@import "modules/_primary-nav";
 
 
 
