--- a/app/assets/css/modules/_large-hero.css
+++ b/app/assets/css/modules/_large-hero.css
@@ -7,11 +7,15 @@
 
 	&__text-content { 
 		position: absolute;
+		padding-top: 88px;
 		top: 50%;
 		transform: translateY(-50%);
 		left: 0;
 		text-align: center;
-		width: 100%; }
+		width: 100%;
+
+		@mixin atMedium { 
+			padding-top: 60px; } }
 
 	&__title { 
 		color: $mainBlue;
