--- a/app/assets/css/modules/_primary-nav.css
+++ b/app/assets/css/modules/_primary-nav.css
@@ -1,7 +1,8 @@
 .primary-nav { 
 	
 	&--pull-right { 
-		float: right; }
+		@mixin atMedium { 
+		float: right; } }
 
 
 	ul { 
@@ -10,10 +11,19 @@
 		@mixin clearfix; }
 
 	li { 
-		float: left;
+		display: inline-block;
 		list-style: none;
-		padding-right: 20px; }
+		padding-right: 7px;
 
+		@mixin atMedium { 
+			display: block;
+			float: left;
+			padding-right: 20px; } }
+	
+	li:last-child { 
+		padding-right: 0;
+		@mixin atMedium { 
+			padding-right: 20px; } }
 
 	a { 
 		color: #FFf;
