--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -1,14 +1,20 @@
 .site-header { 
 	padding: 10px 0;
 	position: absolute;
+	transition: background-color .4s ease-out;
 	width: 100%;
 	z-index: 2;
+
+	&--is-expanded { 
+		background-color: rgba($mainBlue, .55); }
 
 	@mixin atMedium { 
 		background-color: rgba($mainBlue, .3); }
 
 	&__btn-container { 
-		float: right; }
+		
+		@mixin atMedium { 
+			float: right; } }
 
 	&__logo { 
 		background-color: $mainBlue;
@@ -39,7 +45,48 @@
 			display: none; } }
 
 	&__menu-content { 
-		display: none;
+		opacity: 0;
+		padding-top: 100px;
+		position: relative;
+		transition: all .4s ease-out;
+		transform: scale(1.2);
+		text-align: center;
+		z-index: -10;
 
 			@mixin atMedium { 
-				display: block; } } }
+				opacity: 1;
+				padding-top: 0;
+				transform: scale(1);
+				z-index: 1; }
+
+			&--is-visible { 
+				opacity: 1;
+				transform: scale(1);
+				z-index: 1; } } }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
