--- a/app/assets/css/modules/_primary-nav.css
+++ b/app/assets/css/modules/_primary-nav.css
@@ -1,4 +1,9 @@
 .primary-nav { 
+
+	padding-top: 10px;
+
+	@mixin atMedium {
+		padding-top: 0; }
 	
 	&--pull-right { 
 		@mixin atMedium { 
@@ -26,8 +31,15 @@
 			padding-right: 20px; } }
 
 	a { 
+		background-color: rgba($mainBlue, .5);
 		color: #FFf;
 		display: block;
+		font-size: .8rem;
 		font-weight: 300;
-		padding: 12px 0;
-		text-decoration: none; } }
+		padding: 5px 8px;
+		text-decoration: none;
+
+		@mixin atMedium { 
+			background-color: transparent;
+			font-size: 1rem;
+			padding: 12px 0; } } }
