--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -40,13 +40,14 @@
 		right: 10px;
 		top: 10px;
 		width: 20px;
+		z-index: 10;
 
 		@mixin atMedium { 
 			display: none; } }
 
 	&__menu-content { 
 		opacity: 0;
-		padding-top: 100px;
+		padding-top: 90px;
 		position: relative;
 		transition: all .4s ease-out;
 		transform: scale(1.2);
