--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -34,16 +34,59 @@
 		text-indent: -9999px; }
 	
 	&__menu-icon { 
-		background-color: #FFF;
-		height: 20px;
+		/*background-color: #FFF;*/
+		height: 19px;
 		position: absolute;
 		right: 10px;
 		top: 10px;
 		width: 20px;
 		z-index: 10;
 
+		 &::before { 
+		 	background-color: #FFF;
+		 	content: "";
+		 	height: 3px;
+		 	position: absolute;
+		 	left: 0;
+		 	top: 0;
+		 	transform-origin: 0 0;
+		 	transition: transform .3s ease-out;
+		 	width: 20px; }
+
+		 &__middle { 
+		 	background-color: #FFF;
+		 	height: 3px;
+		 	position: absolute;
+		 	left: 0;
+		 	top: 8px;
+		 	transition: all .3s ease-out;
+		 	transform-origin: 0 50%;
+		 	width: 20px; }
+
+		 	&::after { 
+		 	background-color: #FFF;
+		 	content: "";
+		 	height: 3px;
+		 	position: absolute;
+		 	left: 0;
+		 	transform-origin: 0 100%;
+		 	transition: transform .3s ease-out;
+		 	bottom: 0;
+		 	width: 20px; }
+
 		@mixin atMedium { 
 			display: none; } }
+
+	&__menu-icon--close-x { 
+		&::before { 
+			transform: rotate(45deg) scaleX(1.25); }
+
+		.site-header__menu-icon__middle { 
+			 opacity: 0;
+			  transform: scaleX(0); }
+
+		&::after { 
+			 transform: rotate(-45deg) scaleX(1.25) translateY(1px); } }
 
 	&__menu-content { 
 		opacity: 0;
