--- a/app/assets/css/modules/_reveal-item.css
+++ b/app/assets/css/modules/_reveal-item.css
@@ -1,6 +1,8 @@
 .reveal-item { 
 	opacity: 0;
-	transition: opacity 1.5s ease-out;
+	transition: all 1.5s ease-out;
+	transform: scale(1.1 5);
 
 	&--is-visible { 
-		opacity: 1; } }
+		opacity: 1;
+		transform: scale(1); } }
