--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -9,7 +9,11 @@
 		background-color: rgba($mainBlue, .55); }
 
 	@mixin atMedium { 
-		background-color: rgba($mainBlue, .3); }
+		background-color: rgba($mainBlue, .3);
+		position: fixed;
+
+		&--dark { 
+			background-color: rgba(23, 51, 72, .85); } }
 
 	&__btn-container { 
 		
@@ -23,11 +27,15 @@
 		left: 50%;
 		transform: translateX(-50%) scale(.8);
 		transform-origin: 50% 0;
+		transition: transform .3s ease-out;
 		top: 0;
 
 		@mixin atMedium { 
 			left: auto;
-			transform: translateX(0); } }
+			transform: translateX(0); 
+
+			.site-header--dark & { 
+				transform: scale(.57); } } }
 
 
 	&__logo__graphic { 
