--- a/app/assets/css/modules/_modal.css
+++ b/app/assets/css/modules/_modal.css
@@ -1,2 +1,15 @@
 .modal { 
-	 }
+	background-color: rgba(255, 255, 255, .94);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	z-index: 5;
+
+	&__description { 
+		font-size: 1.3rem;
+		font-weight: 300;
+		line-height: 1.65;
+		text-align: center; } 
+}
