completed styling the modal window, clean some files up and added comments

--- a/app/assets/css/modules/_feature-item.css
+++ b/app/assets/css/modules/_feature-item.css
@@ -24,4 +24,6 @@
 		@mixin atSmall { 
 			text-align: left;
 			font-size: 1.875rem;
-			margin-top: 1em; } } }
+			margin-top: 1em; } } 
+
+}/* feature-item END */
