--- a/app/assets/css/modules/_testimonial.css
+++ b/app/assets/css/modules/_testimonial.css
@@ -32,4 +32,6 @@
 		font-size: 0.9375rem;
 		font-weight: 400;
 		margin: .25rem 0 1rem 0;
-		text-align: center; } }
+		text-align: center; } 
+
+}/* testimonial END */
