--- a/app/assets/css/modules/_modal.css
+++ b/app/assets/css/modules/_modal.css
@@ -1,15 +1,38 @@
 .modal { 
 	background-color: rgba(255, 255, 255, .94);
+	opacity: 0;
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
+	visibility: hidden;
 	z-index: 5;
+
+	&__inner { 
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 100%; }
 
 	&__description { 
 		font-size: 1.3rem;
 		font-weight: 300;
 		line-height: 1.65;
-		text-align: center; } 
-}
+		text-align: center; }
+
+	&__close { 
+		color: $mainBlue;
+		cursor: pointer;
+		font-size: 2rem;
+		position: absolute;
+		top: 15px;
+		right: 15px;
+		transform: scaleX(1.2);
+		transform-origin: 100% 0;
+		transition: color .3s ease-in-out;
+
+		&:hover { 
+			color: $mainOrange; } }
+
+}/* modal END */
