--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -25,4 +25,6 @@
 		
 		@mixin atLarge { 
 			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-			background-size: cover; } } }
+			background-size: cover; } } 
+
+}/* page-section END */
