--- a/app/assets/css/modules/_primary-nav.css
+++ b/app/assets/css/modules/_primary-nav.css
@@ -9,7 +9,6 @@
 		@mixin atMedium { 
 		float: right; } }
 
-
 	ul { 
 		margin: 0;
 		padding: 0;
@@ -45,7 +44,6 @@
 			padding: 12px 0;
 
 			&.is-current-link { 
-				color: #fabb69;  } } 
+				color: #fabb69;  } } }
 
-		} 
-}
+}/* primary-nav END */
