--- a/app/assets/css/modules/_section-title.css
+++ b/app/assets/css/modules/_section-title.css
@@ -10,7 +10,8 @@
 		color: $mainBlue; }
 
 	&--less-margin { 
-		margin-bottom: 1.3rem; }
+		margin-bottom: 1.3rem;
+		margin-top: 0; }
 
 	&__icon { 
 		display: block;
