--- a/app/assets/css/modules/_site-footer.css
+++ b/app/assets/css/modules/_site-footer.css
@@ -12,4 +12,6 @@
 		@mixin atMedium { 
 			display: inline;
 			margin-bottom: 0;
-			margin-right: 1.4rem; } } }
+			margin-right: 1.4rem; } } 
+
+}/* site-footer END */
