--- a/app/assets/css/modules/_site-header.css
+++ b/app/assets/css/modules/_site-header.css
@@ -113,31 +113,6 @@
 			&--is-visible { 
 				opacity: 1;
 				transform: scale(1);
-				z-index: 1; } } }
+				z-index: 1; } } 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}/* site-header END */
