--- a/app/assets/css/modules/_social-icons.css
+++ b/app/assets/css/modules/_social-icons.css
@@ -10,17 +10,16 @@
 		position: relative;
 		width: 33%;
 
-	@mixin atSmall {
-		margin: 0 5px;
-		width: 72px;
-	}
+		@mixin atSmall {
+			margin: 0 5px;
+			width: 72px;
+		}
 
-	.icon { 
-	  display: block;
-	 	position: absolute;
-	 	top: 50%;
-	 	left: 50%;
-	 	transform: translate(-50%, -50%); } 
-
-	}
+		.icon { 
+		  display: block;
+		 	position: absolute;
+		 	top: 50%;
+		 	left: 50%;
+		 	transform: translate(-50%, -50%); }  }
+		 	
  }/* social-icons END */
