--- a/app/assets/css/modules/_page-section.css
+++ b/app/assets/css/modules/_page-section.css
@@ -24,7 +24,8 @@
 		background-color: #e0e6ef;
 		
 		@mixin atLarge { 
-			background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
-			background-size: cover; } } 
+			&.lazyloaded { 
+				background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+				background-size: cover; } } } 
 
 }/* page-section END */
