--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -6,6 +6,9 @@ Instead edit gulp/templates/sprite */
 	{{#first}}
 		.icon { 
 			background-image: url('/assets/images/sprites/{{{sprite}}}'); }
+
+		.no-svg .icon { 
+			background-image: url('/assets/images/sprites/{{#svg_with_png}}{{{sprite}}}{{/svg_with_png}}'); }
 	{{/first}}
 
   .icon--{{base}} {
