added modernizr support for flexbox on older browsers

--- a/app/assets/css/modules/_row.css
+++ b/app/assets/css/modules/_row.css
@@ -77,7 +77,7 @@
 	}
 
 	/* Begin Equal Height Rules */
-	&--equal-height-at-medium { 
+	.flexbox &--equal-height-at-medium { 
 
 		@mixin atMedium { 
 			display: flex; }
@@ -86,7 +86,7 @@
 				display: flex;
 				float: none; } }
 
-	&--equal-height-at-large { 
+	.flexbox &--equal-height-at-large { 
 
 		@mixin atLarge { 
 			display: flex; }
